# routes/api.php
@@ -45,6 +45,9 @@ Route::prefix('v1')->group(function () {
             Route::get('/username_check/{email}', [App\Http\Controllers\api\v1\MessageController::class, 'username_check'])->name('username_check');
             Route::post('/create_transaction_pin', [App\Http\Controllers\api\v1\MessageController::class, 'create_transaction_pin'])->name('create_transaction_pin');
             Route::get('/get_bank_list', [App\Http\Controllers\api\v1\MessageController::class, 'get_bank_list'])->name('get_bank_list');
+            Route::get('/get_bill_payment_category', [App\Http\Controllers\api\v1\MessageController::class, 'get_bill_payment_category'])->name('get_bill_payment_category');
+            Route::get('/beneficial_enquiry', [App\Http\Controllers\api\v1\MessageController::class, 'beneficial_enquiry'])->name('beneficial_enquiry');
+            Route::post('/transfer', [App\Http\Controllers\api\v1\MessageController::class, 'transfer'])->name('transfer');
 
 
         });
